<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sqllitecrud.UI.Activities.DetailPersonActivity">

    <TextView
        android:id="@+id/tv_details_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_person_name">
    </TextView>

    <TextView
        android:id="@+id/tv_details_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_details_name"
        android:hint="@string/edit_text_person_surname">
    </TextView>

    <TextView
        android:id="@+id/tv_details_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:hint="@string/edit_text_person_number">
    </TextView>

    <TextView
        android:id="@+id/tv_details_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_details_number"
        android:gravity="end"
        android:hint="@string/edit_text_person_mail">
    </TextView>

    <TextView
        android:id="@+id/tv_details_skype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/tv_details_mail"
        android:gravity="end"
        android:hint="@string/edit_text_person_skype">
    </TextView>

</RelativeLayout>
